--- a/css/slides.css
+++ b/css/slides.css
@@ -517,18 +517,19 @@ s{
 	color: #888;
 }
 .credits .big{
-	font-size:40px;
-	line-height: 42px;
+	font-size:36px;
+	line-height: 38px;
 	color:#fff;
 }
 .credits .divider{
 	display: block;
-	height: 40px;
+	height: 38px;
 }
 .credits a{
 	color:#dd4040;
 }
 .credits a:hover{
 	color:#ee5151;
+	text-decoration:none;
 }
 
